:bug: fix the text overflow in drawer navbar title
The navbar title should fit in the space provided or be ellipsized.

issue: #305

--- a/app/styles/core/header.less
+++ b/app/styles/core/header.less
@@ -9,9 +9,14 @@
  */
 .header--col--left {
     max-width: 70%;
-}
-.header--col--right {
-    max-width: 15%;
+
+    .header--col--left--drawer {
+      max-width: 85%;
+    }
+
+    .header--col--left--search {
+      max-width: 15%;
+    }
 }
 
 /**
@@ -84,4 +89,5 @@
     margin-left   : 0;
     padding-left  : 0;
     padding-right : 0;
+    width         : 100%;
 }
